workspace/g2-translation/src/com/ils/aed/expression/G2ExpressionParser.java
// Generated from G2Expression.g4 by ANTLR 4.0
package com.ils.aed.expression;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class G2ExpressionParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__9=1, T__8=2, T__7=3, T__6=4, T__5=5, T__4=6, T__3=7, T__2=8, T__1=9, 
		T__0=10, NoArgFn=11, SingleArgFn=12, SingleModelFn=13, SingleArgLogicalFn=14, 
		DoubleArgFn=15, DoubleModelFn=16, ThreeArgFn=17, FiveArgFn=18, TimePeriodFn=19, 
		TimePeriodDurationFn=20, L1FN=21, L2FN=22, StringFn=23, TimePeriodLogicalFn=24, 
		VarArgFn=25, DOM=26, DOW=27, HOUR=28, MONTH=29, MINUTE=30, AGO=31, ASOF=32, 
		HOURS=33, MINUTES=34, STATUS=35, SYMBOL=36, VALUEOF=37, VALUE=38, DATESYMBOL=39, 
		COMMA=40, OPR=41, EOPR=42, ROPR=43, LOPR=44, IF=45, THEN=46, ELSE=47, 
		IS=48, BAD=49, GOOD=50, TRUE=51, FALSE=52, AND=53, OR=54, INT=55, FLOAT=56, 
		TIMESTAMP=57, STRING=58, ARG=59, COMMENT=60, PCLOSE=61, POPEN=62, DBLQUOTE=63, 
		SNGLQUOTE=64;
	public static final String[] tokenNames = {
		"<INVALID>", "'H'", "'+-'", "'m'", "'mi'", "'D'", "'d'", "'h'", "'hr'", 
		"'M'", "'hour'", "NoArgFn", "SingleArgFn", "SingleModelFn", "SingleArgLogicalFn", 
		"DoubleArgFn", "DoubleModelFn", "ThreeArgFn", "FiveArgFn", "TimePeriodFn", 
		"TimePeriodDurationFn", "L1FN", "L2FN", "'GET-FROM-TEXT'", "TimePeriodLogicalFn", 
		"VarArgFn", "DOM", "DOW", "HOUR", "MONTH", "MINUTE", "AGO", "ASOF", "HOURS", 
		"MINUTES", "'the status of'", "SYMBOL", "VALUEOF", "'the current value of'", 
		"DATESYMBOL", "','", "OPR", "EOPR", "ROPR", "LOPR", "IF", "THEN", "ELSE", 
		"IS", "BAD", "GOOD", "TRUE", "FALSE", "AND", "OR", "INT", "FLOAT", "TIMESTAMP", 
		"STRING", "ARG", "COMMENT", "')'", "'('", "'\"'", "'''"
	};
	public static final int
		RULE_expression = 0, RULE_exprs = 1, RULE_lexpr = 2, RULE_expr = 3, RULE_timeunit = 4, 
		RULE_period = 5, RULE_lvalue = 6, RULE_value = 7, RULE_g2time = 8, RULE_g2Status = 9, 
		RULE_g2asofExpression = 10, RULE_fuzz = 11, RULE_fuzzdash = 12, RULE_isgoodorbad = 13, 
		RULE_g2Symbol = 14, RULE_vararg = 15;
	public static final String[] ruleNames = {
		"expression", "exprs", "lexpr", "expr", "timeunit", "period", "lvalue", 
		"value", "g2time", "g2Status", "g2asofExpression", "fuzz", "fuzzdash", 
		"isgoodorbad", "g2Symbol", "vararg"
	};

	@Override
	public String getGrammarFileName() { return "G2Expression.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public G2ExpressionParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ExpressionContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(G2ExpressionParser.EOF, 0); }
		public ExprsContext exprs() {
			return getRuleContext(ExprsContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof G2ExpressionVisitor ) return ((G2ExpressionVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32); exprs();
			setState(33); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprsContext extends ParserRuleContext {
		public LexprContext lexpr() {
			return getRuleContext(LexprContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ExprsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprs; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof G2ExpressionVisitor ) return ((G2ExpressionVisitor<? extends T>)visitor).visitExprs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprsContext exprs() throws RecognitionException {
		ExprsContext _localctx = new ExprsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_exprs);
		try {
			setState(37);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(35); expr(0);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(36); lexpr(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LexprContext extends ParserRuleContext {
		public int _p;
		public LexprContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public LexprContext(ParserRuleContext parent, int invokingState, int _p) {
			super(parent, invokingState);
			this._p = _p;
		}
		@Override public int getRuleIndex() { return RULE_lexpr; }
	 
		public LexprContext() { }
		public void copyFrom(LexprContext ctx) {
			super.copyFrom(ctx);
			this._p = ctx._p;
		}
	}
	public static class TimePeriodLogicalFunctionContext extends LexprContext {
		public TerminalNode ARG() { return getToken(G2ExpressionParser.ARG, 0); }
		public TerminalNode TimePeriodLogicalFn() { return getToken(G2ExpressionParser.TimePeriodLogicalFn, 0); }
		public TerminalNode COMMA() { return getToken(G2ExpressionParser.COMMA, 0); }
		public PeriodContext period() {
			return getRuleContext(PeriodContext.class,0);
		}
		public TimePeriodLogicalFunctionContext(LexprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof G2ExpressionVisitor ) return ((G2ExpressionVisitor<? extends T>)visitor).visitTimePeriodLogicalFunction(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class TimeFunctionStringCompareContext extends LexprContext {
		public TerminalNode EOPR() { return getToken(G2ExpressionParser.EOPR, 0); }
		public TerminalNode ARG() { return getToken(G2ExpressionParser.ARG, 0); }
		public TerminalNode TimePeriodLogicalFn() { return getToken(G2ExpressionParser.TimePeriodLogicalFn, 0); }
		public TerminalNode COMMA() { return getToken(G2ExpressionParser.COMMA, 0); }
		public PeriodContext period() {
			return getRuleContext(PeriodContext.class,0);
		}
		public TerminalNode STRING() { return getToken(G2ExpressionParser.STRING, 0); }
		public TimeFunctionStringCompareContext(LexprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof G2ExpressionVisitor ) return ((G2ExpressionVisitor<? extends T>)visitor).visitTimeFunctionStringCompare(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LogicalParenthesesContext extends LexprContext {
		public LexprContext lexpr() {
			return getRuleContext(LexprContext.class,0);
		}
		public LogicalParenthesesContext(LexprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof G2ExpressionVisitor ) return ((G2ExpressionVisitor<? extends T>)visitor).visitLogicalParentheses(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ThreeArgFunctionContext extends LexprContext {
		public TerminalNode COMMA(int i) {
			return getToken(G2ExpressionParser.COMMA, i);
		}
		public TerminalNode ThreeArgFn() { return getToken(G2ExpressionParser.ThreeArgFn, 0); }
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(G2ExpressionParser.COMMA); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ThreeArgFunctionContext(LexprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof G2ExpressionVisitor ) return ((G2ExpressionVisitor<? extends T>)visitor).visitThreeArgFunction(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class G2TimeExpressionContext extends LexprContext {
		public TerminalNode EOPR() { return getToken(G2ExpressionParser.EOPR, 0); }
		public TerminalNode INT() { return getToken(G2ExpressionParser.INT, 0); }
		public TerminalNode ROPR() { return getToken(G2ExpressionParser.ROPR, 0); }
		public TerminalNode SYMBOL() { return getToken(G2ExpressionParser.SYMBOL, 0); }
		public G2timeContext g2time() {
			return getRuleContext(G2timeContext.class,0);
		}
		public TerminalNode DATESYMBOL() { return getToken(G2ExpressionParser.DATESYMBOL, 0); }
		public TerminalNode IS() { return getToken(G2ExpressionParser.IS, 0); }
		public G2TimeExpressionContext(LexprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof G2ExpressionVisitor ) return ((G2ExpressionVisitor<? extends T>)visitor).visitG2TimeExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class RelationalOperatorContext extends LexprContext {
		public TerminalNode EOPR() { return getToken(G2ExpressionParser.EOPR, 0); }
		public TerminalNode ROPR() { return getToken(G2ExpressionParser.ROPR, 0); }
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public RelationalOperatorContext(LexprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof G2ExpressionVisitor ) return ((G2ExpressionVisitor<? extends T>)visitor).visitRelationalOperator(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LogicalSymbolContext extends LexprContext {
		public TerminalNode EOPR() { return getToken(G2ExpressionParser.EOPR, 0); }
		public LexprContext lexpr() {
			return getRuleContext(LexprContext.class,0);
		}
		public G2SymbolContext g2Symbol() {
			return getRuleContext(G2SymbolContext.class,0);
		}
		public LogicalSymbolContext(LexprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof G2ExpressionVisitor ) return ((G2ExpressionVisitor<? extends T>)visitor).visitLogicalSymbol(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FuzzyOperatorWithDashContext extends LexprContext {
		public FuzzdashContext fuzzdash() {
			return getRuleContext(FuzzdashContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public FuzzyOperatorWithDashContext(LexprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof G2ExpressionVisitor ) return ((G2ExpressionVisitor<? extends T>)visitor).visitFuzzyOperatorWithDash(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LogicalTagStringFunctionContext extends LexprContext {
		public TerminalNode L2FN() { return getToken(G2ExpressionParser.L2FN, 0); }
		public TerminalNode ARG() { return getToken(G2ExpressionParser.ARG, 0); }
		public TerminalNode STRING() { return getToken(G2ExpressionParser.STRING, 0); }
		public LogicalTagStringFunctionContext(LexprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof G2ExpressionVisitor ) return ((G2ExpressionVisitor<? extends T>)visitor).visitLogicalTagStringFunction(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StringFunctionExpressionContext extends LexprContext {
		public TerminalNode StringFn() { return getToken(G2ExpressionParser.StringFn, 0); }
		public TerminalNode EOPR() { return getToken(G2ExpressionParser.EOPR, 0); }
		public List<TerminalNode> INT() { return getTokens(G2ExpressionParser.INT); }
		public TerminalNode COMMA(int i) {
			return getToken(G2ExpressionParser.COMMA, i);
		}
		public TerminalNode ARG() { return getToken(G2ExpressionParser.ARG, 0); }
		public List<TerminalNode> COMMA() { return getTokens(G2ExpressionParser.COMMA); }
		public TerminalNode INT(int i) {
			return getToken(G2ExpressionParser.INT, i);
		}
		public TerminalNode STRING() { return getToken(G2ExpressionParser.STRING, 0); }
		public StringFunctionExpressionContext(LexprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof G2ExpressionVisitor ) return ((G2ExpressionVisitor<? extends T>)visitor).visitStringFunctionExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LogicalValueContext extends LexprContext {
		public LvalueContext lvalue() {
			return getRuleContext(LvalueContext.class,0);
		}
		public LogicalValueContext(LexprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof G2ExpressionVisitor ) return ((G2ExpressionVisitor<? extends T>)visitor).visitLogicalValue(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LogicalStringFunctionContext extends LexprContext {
		public TerminalNode L1FN() { return getToken(G2ExpressionParser.L1FN, 0); }
		public TerminalNode STRING() { return getToken(G2ExpressionParser.STRING, 0); }
		public LogicalStringFunctionContext(LexprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof G2ExpressionVisitor ) return ((G2ExpressionVisitor<? extends T>)visitor).visitLogicalStringFunction(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LogicalOperatorContext extends LexprContext {
		public TerminalNode EOPR() { return getToken(G2ExpressionParser.EOPR, 0); }
		public List<LexprContext> lexpr() {
			return getRuleContexts(LexprContext.class);
		}
		public TerminalNode LOPR() { return getToken(G2ExpressionParser.LOPR, 0); }
		public LexprContext lexpr(int i) {
			return getRuleContext(LexprContext.class,i);
		}
		public LogicalOperatorContext(LexprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof G2ExpressionVisitor ) return ((G2ExpressionVisitor<? extends T>)visitor).visitLogicalOperator(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SingleArgLogicalFunctionContext extends LexprContext {
		public LexprContext lexpr() {
			return getRuleContext(LexprContext.class,0);
		}
		public TerminalNode SingleArgLogicalFn() { return getToken(G2ExpressionParser.SingleArgLogicalFn, 0); }
		public SingleArgLogicalFunctionContext(LexprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof G2ExpressionVisitor ) return ((G2ExpressionVisitor<? extends T>)visitor).visitSingleArgLogicalFunction(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StatusSymbolContext extends LexprContext {
		public TerminalNode EOPR() { return getToken(G2ExpressionParser.EOPR, 0); }
		public G2StatusContext g2Status() {
			return getRuleContext(G2StatusContext.class,0);
		}
		public G2SymbolContext g2Symbol() {
			return getRuleContext(G2SymbolContext.class,0);
		}
		public TerminalNode IS() { return getToken(G2ExpressionParser.IS, 0); }
		public StatusSymbolContext(LexprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof G2ExpressionVisitor ) return ((G2ExpressionVisitor<? extends T>)visitor).visitStatusSymbol(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LogicalTagContext extends LexprContext {
		public TerminalNode ARG() { return getToken(G2ExpressionParser.ARG, 0); }
		public LogicalTagContext(LexprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof G2ExpressionVisitor ) return ((G2ExpressionVisitor<? extends T>)visitor).visitLogicalTag(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class TagStringContext extends LexprContext {
		public TerminalNode EOPR() { return getToken(G2ExpressionParser.EOPR, 0); }
		public TerminalNode ARG() { return getToken(G2ExpressionParser.ARG, 0); }
		public TerminalNode STRING() { return getToken(G2ExpressionParser.STRING, 0); }
		public TagStringContext(LexprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof G2ExpressionVisitor ) return ((G2ExpressionVisitor<? extends T>)visitor).visitTagString(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LogicalOperatorWithDashContext extends LexprContext {
		public TerminalNode EOPR() { return getToken(G2ExpressionParser.EOPR, 0); }
		public TerminalNode ROPR() { return getToken(G2ExpressionParser.ROPR, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode OPR() { return getToken(G2ExpressionParser.OPR, 0); }
		public LogicalOperatorWithDashContext(LexprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof G2ExpressionVisitor ) return ((G2ExpressionVisitor<? extends T>)visitor).visitLogicalOperatorWithDash(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LeadingCommentContext extends LexprContext {
		public LexprContext lexpr() {
			return getRuleContext(LexprContext.class,0);
		}
		public TerminalNode COMMENT() { return getToken(G2ExpressionParser.COMMENT, 0); }
		public LeadingCommentContext(LexprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof G2ExpressionVisitor ) return ((G2ExpressionVisitor<? extends T>)visitor).visitLeadingComment(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FiveArgFunctionContext extends LexprContext {
		public TerminalNode COMMA(int i) {
			return getToken(G2ExpressionParser.COMMA, i);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
